Fix formatting and spacing in index.html

--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
 <Br><Br>
 💪 Ми знаємо, як вам допомогти!
  <br><br>
-🎁Наша програма <strong>'Short-Перезавантаження'</strong> - всього за 10 хвилин – принесе вам миттєве полегшення та енергію для ефективного дня!
+✅ Наша програма <strong>'Short-Перезавантаження'</strong> - всього за 10 хвилин – принесе вам миттєве полегшення та енергію для ефективного дня!
 <br><Br>
 
-🎁Отримайте доступ до бонусів та додаткових матеріалів для ще більшої користі!
+🎁 Отримайте доступ до бонусів та додаткових матеріалів для ще більшої користі!
 <br><br>
-🌟Гарний сон, зменшення впливу стресу та ПТСР – насолодження кожною миттю життя!
+🌟 Гарний сон, зменшення впливу стресу та ПТСР – насолодження кожною миттю життя!
 
 
 </p>
