--- a/thanks.html
+++ b/thanks.html
@@ -16,12 +16,12 @@
   s.parentNode.insertBefore(t,s)}(window, document,'script',
   'https://connect.facebook.net/en_US/fbevents.js');
 
-  fbq('init', 'PIXEL_ID');      /* <-- ЗАМЕНИ на свой Pixel ID */
+  fbq('init', '885125430564169');      /* <-- ЗАМЕНИ на свой Pixel ID */
   fbq('track', 'PageView');
   </script>
   <noscript>
     <img height="1" width="1" style="display:none"
-      src="https://www.facebook.com/tr?id=PIXEL_ID&ev=PageView&noscript=1"/>
+      src="https://www.facebook.com/tr?id=885125430564169&ev=PageView&noscript=1"/>
   </noscript>
   <!-- ✅ End Meta Pixel (BASE) -->
 
