Revise Google Analytics and cookie usage information
Updated text regarding Google Analytics usage and cookie policy.

--- a/index2.html
+++ b/index2.html
@@ -118,21 +118,12 @@
     Правила використання Google Analytics
 </h1>
 <p>
-    Для роботи з медійною рекламою ми додали функції Google Analytics, пов'язані з ремаркетингом, звітом про покази в контекстно-медійній мережі Google, інтеграцією DoubleClick Campaign Manager або звітами за інтересами та демографічними даними.
+Аналітика та файли cookie
 
-На сторінці Налаштування рекламних уподобань
+Сайт **centerway.net.ua** використовує файли cookie та інструменти веб-аналітики (зокрема Google Analytics) для аналізу відвідуваності та покращення роботи сервісу.
 
-відвідувачі сайту можуть відключити для себе функції Google Analytics, пов'язані з медійною рекламою, і вибрати, які оголошення їм будуть показуватися в контекстно-медійній мережі Google, скористатися настройками Інструменти
+Зібрана інформація є знеособленою та не дозволяє ідентифікувати конкретного користувача. Користувач може самостійно обмежити або вимкнути використання cookie в налаштуваннях свого браузера.
 
-безпеки та конфіденційності Google, і також можуть використовувати блокер Google Analytics.
-
-Сторонні рекламні сервіси, зокрема Google, можуть показувати наші оголошення на інших сайтах в Інтернеті.
-
-Наш сайт і сторонні рекламні сервіси, зокрема Google, використовують власні файли cookie (наприклад, файл cookie Google Analytics) і сторонні файли cookie (наприклад, файл cookie DoubleClick). З їхньою допомогою ми отримуємо відомості про відвідування нашого сайту, які ми використовуємо для аналітики, оптимізації реклами та показу персоналізованих оголошень користувачам.
-
-Для реалізації звітів про покази в контекстно-медійній мережі або інтеграції DCM наш сайт і сторонні рекламні сервіси, зокрема Google, використовують власні файли cookie (наприклад, файл cookie Google Analytics) і сторонні файли cookie (наприклад, файл cookie DoubleClick). З їхньою допомогою ми отримуємо статистику про вплив показів ваших оголошень, використання інших рекламних сервісів та їхньої взаємодії на відвідуваність нашого сайту.
-
-Ми використовуємо звіти за інтересами та демографічними даними (вік, стать, інтереси) від сторонніх сервісів, які ми отримуємо через Google Analytics, для аналізу нашої цільової аудиторії та надання саме тієї інформації, яка цікавить конкретних користувачів певного віку та інтересів.
 </p>
 <h1>
     Електронні розсилки
