Update header and text for Google Analytics usage

--- a/index2.html
+++ b/index2.html
@@ -115,12 +115,11 @@
 ​
 </p>
 <h1>
-    Правила використання Google Analytics
+    Правила використання Google Analytics та файлів cookie
 </h1>
 <p>
-Аналітика та файли cookie
 
-Сайт **centerway.net.ua** використовує файли cookie та інструменти веб-аналітики (зокрема Google Analytics) для аналізу відвідуваності та покращення роботи сервісу.
+Сайт centerway.net.ua використовує файли cookie та інструменти веб-аналітики (зокрема Google Analytics) для аналізу відвідуваності та покращення роботи сервісу.
 
 Зібрана інформація є знеособленою та не дозволяє ідентифікувати конкретного користувача. Користувач може самостійно обмежити або вимкнути використання cookie в налаштуваннях свого браузера.
 
