--- a/index2.html
+++ b/index2.html
@@ -142,21 +142,21 @@
 
 <p>
 Повернення коштів за придбані цифрові продукти та онлайн-послуги, що надаються через сайт <strong>centerway.net.ua</strong>, здійснюється відповідно до чинного законодавства України.
-<br></br>
+
 <br><strong>Цифрові продукти та онлайн-курси</strong></br>
 Після надання доступу до цифрового контенту (онлайн-курси, програми, відеоматеріали, записи занять, Telegram-боти, особисті кабінети) кошти <strong>не підлягають поверненню</strong>, оскільки послуга вважається наданою в повному обсязі.
 
 <br><strong>Винятки можливі</strong>, якщо:</br>
 <ul>
-    <li>* доступ до продукту не був наданий з технічної вини Виконавця;</li>
-    <li>* оплата була здійснена помилково (подвійна транзакція).</li>
+    <li>доступ до продукту не був наданий з технічної вини Виконавця;</li>
+    <li>оплата була здійснена помилково (подвійна транзакція).</li>
 </ul>
 <br><strong>Порядок повернення коштів</strong></br>
 Для розгляду запиту на повернення необхідно надіслати звернення на електронну адресу centertheway@gmail.com із зазначенням:
 <ul>
-<li>- ПІБ платника;</li>
-<li>- дати та суми платежу;</li>
-<li>- причини звернення.</li>
+<li>ПІБ платника;</li>
+<li>дати та суми платежу;</li>
+<li>причини звернення.</li>
 </ul>
 Запит розглядається протягом <strong>до 5 робочих днів</strong>. У разі позитивного рішення повернення коштів здійснюється тим самим способом, яким була проведена оплата, протягом строків, встановлених платіжною системою LiqPay.
 </p>
