Refactor refund policy section in index2.html

--- a/index2.html
+++ b/index2.html
@@ -138,36 +138,57 @@
 угодою на обробку даних, відмовою від відповідальності, політикою повернень і угодою на розсилку рекламних матеріалів.
  
 </p>
-<h1> Умови повернення коштів</h1>
+<h1>Умови повернення коштів</h1>
 
 <p>
-Повернення коштів за придбані цифрові продукти та онлайн-послуги, що надаються через сайт <strong>centerway.net.ua</strong>, здійснюється відповідно до чинного законодавства України.
-
-<br><strong>Цифрові продукти та онлайн-курси</strong></br>
-Після надання доступу до цифрового контенту (онлайн-курси, програми, відеоматеріали, записи занять, Telegram-боти, особисті кабінети) кошти <strong>не підлягають поверненню</strong>, оскільки послуга вважається наданою в повному обсязі.
-
-<br><strong>Винятки можливі</strong>, якщо:</br>
-<ul>
-    <li>доступ до продукту не був наданий з технічної вини Виконавця;</li>
-    <li>оплата була здійснена помилково (подвійна транзакція).</li>
-</ul>
-<br><strong>Порядок повернення коштів</strong></br>
-Для розгляду запиту на повернення необхідно надіслати звернення на електронну адресу centertheway@gmail.com із зазначенням:
-<ul>
-<li>ПІБ платника;</li>
-<li>дати та суми платежу;</li>
-<li>причини звернення.</li>
-</ul>
-Запит розглядається протягом <strong>до 5 робочих днів</strong>. У разі позитивного рішення повернення коштів здійснюється тим самим способом, яким була проведена оплата, протягом строків, встановлених платіжною системою LiqPay.
+  Повернення коштів за придбані цифрові продукти та онлайн-послуги, що надаються через сайт
+  <strong>centerway.net.ua</strong>, здійснюється відповідно до чинного законодавства України.
 </p>
+
+<h2>Цифрові продукти та онлайн-курси</h2>
+
+<p>
+  Після надання доступу до цифрового контенту (онлайн-курси, програми, відеоматеріали,
+  записи занять, Telegram-боти, особисті кабінети) кошти
+  <strong>не підлягають поверненню</strong>, оскільки послуга вважається наданою в повному обсязі.
+</p>
+
+<h3>Винятки можливі, якщо:</h3>
+
+<ul>
+  <li>доступ до продукту не був наданий з технічної вини Виконавця;</li>
+  <li>оплата була здійснена помилково (подвійна транзакція).</li>
+</ul>
+
+<h2>Порядок повернення коштів</h2>
+
+<p>
+  Для розгляду запиту на повернення необхідно надіслати звернення на електронну адресу
+  centertheway@gmail.com із зазначенням:
+</p>
+
+<ul>
+  <li>ПІБ платника;</li>
+  <li>дати та суми платежу;</li>
+  <li>причини звернення.</li>
+</ul>
+
+<p>
+  Запит розглядається протягом <strong>до 5 робочих днів</strong>.
+  У разі позитивного рішення повернення коштів здійснюється тим самим способом,
+  яким була проведена оплата, у строки, встановлені платіжною системою LiqPay.
+</p>
+
 
 <h1>Реквізити ФОП</h1>
 
 <p>
-Фізична особа-підприємець: Корякін Евгеній Володимирович
-ІПН: 3153311278
-Юридична адреса: 08300 Kuївська обл., м. Бориспіль, вул. Момота 42, оф. 51
-Електронна пошта: centertheway@gmail.com
+    <ul>
+    <li>Фізична особа-підприємець: Корякін Евгеній Володимирович</li>
+    <li>ІПН: 3153311278</li>
+    <li>Юридична адреса: 08300 Kuївська обл., м. Бориспіль, вул. Момота 42, оф. 51</li>
+    <li>Електронна пошта: centertheway@gmail.com</li>
+    </ul>
 </p>
     
 <h1>Зміни цієї політики</h1>
