Fix typos in Ukrainian text

--- a/index2.html
+++ b/index2.html
@@ -85,7 +85,7 @@
 Вимкнення Cookies і маяків: Якщо збір такої інформації через маркери Cookies і маяки вам неприємний, рекомендуємо вимкнути ці функції в налаштуваннях свого браузера, але, будь ласка, пам'ятайте, що це обмежить ефективність і функціональність веб-сайтів нашої Компанії. Про те, як відключити підтримку cookie і маяків, як правило, йдеться в інструкції до браузера.
 </p>
 <h1>
-    Іформаційний захист дітей
+    Інформаційний захист дітей
 </h1>
 <p>
     Захист дітей від інтернет-інформації особливо важливий.
@@ -105,7 +105,7 @@
     Певна частина наших сайтів може надавати доступ до суспільних послуг, зокрема, дощок обговорення, чатів і заходів у режимі реального часу. Користуючись такими послугами, будь ласка, будьте обережні, коли публікуєте інформацію про себе. Врахуйте, що особиста інформація, розкрита на таких сайтах, наприклад, ваше ім'я, ім'я користувача, адреса електронної пошти тощо, може збиратися та використовуватися для несанкціонованих розсилок. Такі послуги відкриті для громадського користування, і те, що ви публікуєте там, може переглядати будь-хто - інформація не захищена. Ми не в змозі контролювати коментарі, які ви можете отримати, беручи участь у таких послугах. Коментарі інших людей можуть здатися вам образливими, небезпечними або некоректними.
 </p>
 <h1>
-    Прихильність принципам кофідиціальності
+    Прихильність принципам конфіденційності
 </h1>
 <p>
     Для захисту вашої особистої інформації ми використовуємо різноманітні адміністративні, управлінські та технічні заходи безпеки. "centerway.net.ua" дотримується різних міжнародних стандартів контролю, спрямованих на операції з особистою інформацією, які включають певні заходи контролю щодо захисту інформації, зібраної в Інтернеті. Наших співробітників навчають розуміти і виконувати ці заходи контролю, вони ознайомлені з нашою "Політикою конфіденційності", нормами та інструкціями. Проте, незважаючи на те, що ми прагнемо убезпечити вашу особисту інформацію, ви теж повинні вживати заходів, щоб захистити її. Ми наполегливо рекомендуємо вам вживати всіх можливих запобіжних заходів під час перебування в інтернеті.
@@ -130,8 +130,8 @@
 <p>
 "centerway.net.ua" має право здійснювати електронні розсилки новин, інформації про спеціальні пропозиції та акції, а також надсилати індивідуальні відповіді на звернення своїх клієнтів.
 
-У будь-який момент користувачі можуть відмовитися від розсилок, перейшовши за відповідним посиланням внизу будь-якого з отриманих листів. Також користувач може відписатися від розсилки, надіславши листа з цією вимогою на електронну адресу: centertheway@gmail.com
-Продовжуючи використовувати веб-сайт centerway.net.ua посилання на сайт, а також сайти на інших наших доменах і під-доменах, або супутні послуги, ви погоджуєтеся з цією політикою конфіденційності. У разі незгоди користувача з умовами цієї політики використання сайту та його сервісів має бути негайно припинено.
+У будь-який момент користувачі можуть відмовитися від розсилок, перейшовши за відповідним посиланням внизу будь-якого з отриманих листів. Також користувач може відписатися від розсилки, надіславши листа з цією вимогою на електронну адресу: centertheway@gmail.com.
+Продовжуючи використовувати веб-сайт centerway.net.ua, а також сайти на інших наших доменах і під-доменах, або супутні послуги, ви погоджуєтеся з цією політикою конфіденційності. У разі незгоди користувача з умовами цієї політики використання сайту та його сервісів має бути негайно припинено.
 
 Користуючись і/або вводячи свої дані на сайті http://centerway.net.ua або його піддоменах, ви даєте свою згоду на отримання розсилки матеріалів рекламного та/або інформаційного характеру за допомогою SMS-сервісів, електронної пошти тощо від  "centerway.net.ua" та підтверджуєте, що ознайомилися з офертою, політикою конфіденційності,
 
