--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
                     <img src="img/logofooter.png" alt="Logo" class="footer-logo">
 
                     <div class="footer-logo-payments">
-                        <img src="img/visa-mc.png" alt="Visa-mc" class="lazyload">
+                        <img data-src="img/visa-mc.png" alt="Visa/Mastercard" class="lazyload">
                    </div>
                 </div>
                 
