--- a/index.html
+++ b/index.html
@@ -443,16 +443,20 @@
 <footer class="footer">
 <div class="container">
 <div class="footer-content">
-<div class="footer-section">
-<img data-src="img/logofooter.png" class="lazyload">
+<div class="footer-section" id="footer-left">
+<img data-src="img/logofooter.png" alt="Logo" class="lazyload">
 
+<div class="footer-logo-payments">
+    <img data-src="img/visa-mc.png" alt="Visa/Mastercard" class="lazyload">
+</div>    
+    
 </div>
-<div class="footer-section" id="footercenter">
+<div class="footer-section" id="footer-center">
 <p><a href="index2.html">Політика конфіденційності</a></p>
-                <p>© 2025 Всі права захищені.</p>
+                <p>© 2026 Всі права захищені.</p>
 
 </div>
-<div class="footer-section"  id="footerright">
+<div class="footer-section"  id="footer-right">
 <p>+38 (063) 602 44 50</p>
 <div class="item">
 <a href="https://www.youtube.com/channel/UC0VPHLWTIXD3Rad5XkcyliA">  <img data-src="img/youtube2.png" class="lazyload" ></a>
