--- a/index2.html
+++ b/index2.html
@@ -142,7 +142,7 @@
 
 <p>
   Повернення коштів за придбані цифрові продукти та онлайн-послуги, що надаються через сайт
-  <strong>centerway.net.ua</strong>, здійснюється відповідно до чинного законодавства України.
+  <strong>centerway.net.ua</strong>, здійснюється відповідно до чинного законодавства України. (<a href="public-offer.html" id="public-offer">Публічний договір</a>)
 </p>
 
 <h3>Цифрові продукти та онлайн-курси</h3>
@@ -184,10 +184,10 @@
 
 <p>
     <ul>
-    <li>Фізична особа-підприємець: Корякін Евгеній Володимирович</li>
-    <li>ІПН: 3153311278</li>
-    <li>Юридична адреса: 08300 Kuївська обл., м. Бориспіль, вул. Момота 42, оф. 51</li>
-    <li>Електронна пошта: centertheway@gmail.com</li>
+        <li>Фізична особа-підприємець: Корякін Евгеній Володимирович</li>
+        <li>ІПН: 3153311278</li>
+        <li>Юридична адреса: 08300 Kuївська обл., м. Бориспіль, вул. Момота 42, оф. 51</li>
+        <li>Електронна пошта: centertheway@gmail.com</li>
     </ul>
 </p>
     
