--- a/public-offer.html
+++ b/public-offer.html
@@ -1,10 +1,13 @@
 <!doctype html>
 <html lang="uk">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Публічний договір (оферта)</title>
-</head>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+ 
+       <link rel="stylesheet" href="css/main2.css">
+        <link rel="stylesheet" href="css/fonts.css">
+    <title>Публічний договір (оферта)</title>
 <body>
   <main class="public-offer-page">
     <article class="public-offer">
