--- a/index2.html
+++ b/index2.html
@@ -155,24 +155,25 @@
 
 <h3>Винятки можливі, якщо:</h3>
 
-<ul>
-  <li>доступ до продукту не був наданий з технічної вини Виконавця;</li>
-  <li>оплата була здійснена помилково (подвійна транзакція).</li>
-</ul>
-
+<p>
+"- доступ до продукту не був наданий з технічної вини Виконавця;"
+<br>
+"- оплата була здійснена помилково (подвійна транзакція)."
+</p>
+    
 <h3>Порядок повернення коштів</h3>
 
 <p>
   Для розгляду запиту на повернення необхідно надіслати звернення на електронну адресу
   centertheway@gmail.com із зазначенням:
+</p> 
+<p>
+"- ПІБ платника;"
+<br>
+"- дати та суми платежу;"
+<br>
+"- причини звернення."
 </p>
-
-<ul>
-  <li>ПІБ платника;</li>
-  <li>дати та суми платежу;</li>
-  <li>причини звернення.</li>
-</ul>
-
 <p>
   Запит розглядається протягом <strong>до 5 робочих днів</strong>.
   У разі позитивного рішення повернення коштів здійснюється тим самим способом,
@@ -183,12 +184,13 @@
 <h1>Реквізити ФОП</h1>
 
 <p>
-    <ul>
-        <li>Фізична особа-підприємець: Корякін Евгеній Володимирович</li>
-        <li>ІПН: 3153311278</li>
-        <li>Юридична адреса: 08300 Kuївська обл., м. Бориспіль, вул. Момота 42, оф. 51</li>
-        <li>Електронна пошта: centertheway@gmail.com</li>
-    </ul>
+"- Фізична особа-підприємець: Корякін Евгеній Володимирович"
+<br>
+"- ІПН: 3153311278
+<br>
+"- Юридична адреса: 08300 Kuївська обл., м. Бориспіль, вул. Момота 42, оф. 51
+<br>
+"- Електронна пошта: centertheway@gmail.com"
 </p>
     
 <h1>Зміни цієї політики</h1>
