--- a/index2.html
+++ b/index2.html
@@ -64,10 +64,10 @@
 </h2>
 <p>
     Cookies: Для збору інформації "centerway.net.ua" може користуватися маркерами Cookies; це маленькі інформаційні файли, які зберігаються вашим браузером на жорсткому диску вашого комп'ютера на вимогу веб-сайту. Маркери Cookies "centerway.net.ua" не містять будь-якої персональної інформації та переважно використовуються таким чином:
-    <br>- для відстеження часової інформації. Наприклад, маркери Cookies дають нам змогу відстежувати, які картинки ви завантажуєте та завантажуєте;</br>
-    <br>- щоб реєструвати вас у спеціальних програмах. Cookies дають нам змогу запам'ятовувати вас під час входу в зони нашого сайту, для яких необхідно бути Членом; щоб запам'ятати ваші уподобання щодо країни та мови;</br>
-    <br>- щоб допомогти нам зрозуміти масштаби своєї аудиторії і розподіл трафіку; для збору і запису інформації про те, що ви переглянули на нашому сайті і що переглянули в нашому електронному листі;</br>
-    <br>- для управління інформацією сайту та її презентації, а також щоб зрозуміти, які зображення можуть відображатися на вашому комп'ютері, і подавати інформацію відповідно до ваших інтересів</br>
+    <br>– для відстеження часової інформації. Наприклад, маркери Cookies дають нам змогу відстежувати, які картинки ви завантажуєте та завантажуєте;</br>
+    <br>– щоб реєструвати вас у спеціальних програмах. Cookies дають нам змогу запам'ятовувати вас під час входу в зони нашого сайту, для яких необхідно бути Членом; щоб запам'ятати ваші уподобання щодо країни та мови;</br>
+    <br>– щоб допомогти нам зрозуміти масштаби своєї аудиторії і розподіл трафіку; для збору і запису інформації про те, що ви переглянули на нашому сайті і що переглянули в нашому електронному листі;</br>
+    <br>– для управління інформацією сайту та її презентації, а також щоб зрозуміти, які зображення можуть відображатися на вашому комп'ютері, і подавати інформацію відповідно до ваших інтересів</br>
     Веб-маяки: Ми також можемо розміщувати на своєму веб-сайті, в інтернет-рекламі за участю третіх сторін і своїх електронних листах невеликі "зображення, що стежать" або "маяки". Такі маяки застосовуються разом з маркерами Cookies для збору неособистої інформації про використання нашого сайту, зокрема, включно з часом і датою відвідування, переглянутими сторінками, сторінкою переходу, типом браузера (наприклад Google Chrome), типом операційної системи (наприклад, Windows, Linux або Mac), а також ім'ям домену провайдера інтернет-послуг відвідувача. Ми збираємо таку інформацію про відвідування сайту тисячами і аналізуємо в цілому. Ця інформація важлива, зокрема, для визначення ефективності нашої інтернет-реклами, наприклад, банерів і вибору місця для майбутньої реклами на інших веб-ресурсах.
     Вимкнення Cookies і маяків: Якщо збір такої інформації через маркери Cookies і маяки вам неприємний, рекомендуємо вимкнути ці функції в налаштуваннях свого браузера, але, будь ласка, пам'ятайте, що це обмежить ефективність і функціональність веб-сайтів нашої Компанії. Про те, як відключити підтримку cookie і маяків, як правило, йдеться в інструкції до браузера.
 </p>
@@ -144,8 +144,8 @@
 <strong>Винятки можливі, якщо:</strong>
 
 <p>
-- доступ до продукту не був наданий з технічної вини Виконавця;
-<br>- оплата була здійснена помилково (подвійна транзакція).</br>
+– доступ до продукту не був наданий з технічної вини Виконавця;
+<br>– оплата була здійснена помилково (подвійна транзакція).
 </p>
     
 <strong>Порядок повернення коштів</strong>
@@ -155,9 +155,9 @@
   centertheway@gmail.com із зазначенням:
 </p> 
 <p>
-"- ПІБ платника;"
-<br>- дати та суми платежу;</br>
-<br>- причини звернення.</br>
+– ПІБ платника;
+<br>– дати та суми платежу;
+<br>– причини звернення.
 </p>
 <p>
   Запит розглядається протягом <strong>до 5 робочих днів</strong>.
@@ -168,10 +168,10 @@
 <h2>Реквізити ФОП</h2>
 
 <p>
-- Фізична особа-підприємець: Корякін Евгеній Володимирович"
-<br>- ІПН: 3153311278</br>
-<br>- Юридична адреса: 08300 Kuївська обл., м. Бориспіль, вул. Момота 42, оф. 51</br>
-<br>- Електронна пошта: centertheway@gmail.com</br>
+– Фізична особа-підприємець: Корякін Евгеній Володимирович"
+<br>– ІПН: 3153311278
+<br>– Юридична адреса: 08300 Kuївська обл., м. Бориспіль, вул. Момота 42, оф. 51
+<br>– Електронна пошта: centertheway@gmail.com
 </p>
     
 <h2>Зміни цієї політики</h2>
