Add new review images, enhance footer layout, and improve CSS styles for responsiveness and alignment

--- a/index.html
+++ b/index.html
@@ -207,6 +207,8 @@
                 <div class="reviews-track" id="reviews-track">
                     <div class="reviews-item"><img src="img/feedback9.jpg" alt="Відгук 1"></div>
                     <div class="reviews-item"><img src="img/feedback10.jpg" alt="Відгук 2"></div>
+                    <div class="reviews-item"><img src="img/feedback_short_fb.jpg" alt="Відгук 3"></div>
+                    <div class="reviews-item"><img src="img/feedback_short_tg.jpg" alt="Відгук 4"></div>
                 </div>
                 <button class="carousel-btn next" type="button" aria-label="Наступний відгук">›</button>
             </div>
