--- a/index.html
+++ b/index.html
@@ -51,26 +51,25 @@
                     <p>Інтегруйте цей комплекс в своє життя і ви отримаєте:</p>
 
                     <ul class="benefits__list">
-            <li class="benefits__item">
-              <span class="benefits__icon">✓</span>
-              Зниження стресу та покращення сну
-            </li>
+                        <li class="benefits__item">
+                        <span class="benefits__icon">✓</span>
+                        Зниження стресу та покращення сну
+                        </li>
 
-            <li class="benefits__item">
-              <span class="benefits__icon">✓</span>
-              Збільшення рівня енергії
-            </li>
+                        <li class="benefits__item">
+                        <span class="benefits__icon">✓</span>
+                        Збільшення рівня енергії
+                        </li>
 
-            <li class="benefits__item">
-              <span class="benefits__icon">✓</span>
-              Зміцнення здоров'я
-            </li>
+                        <li class="benefits__item">
+                        <span class="benefits__icon">✓</span>
+                        Зміцнення здоров'я
+                        </li>
+                    </ul>
+                </div>
 
-            <li class="benefits__item">
-              <span class="benefits__icon">✓</span>
-              Підходить як новачкам, так і практикуючим
-            </li>
-          </ul>
+                <div>
+                    <p class="s1-preprice">Почніть перезавантаження вже сьогодні 👇</p>
                 </div>
 
                 <div id="divprice">
@@ -79,7 +78,7 @@
                         <div class="price-note">Доступ назавжди</div>
                     </div>
                     <button class="openModal">Хочу на курс</button>
-                    <p class="cta-note">👉 Почніть перезавантаження вже сьогодні</p>
+                    <p class="cta-note">📍 Підходить і новачкам, і практикуючим</p>
                 </div>
             </div>
 
