--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 </div>
 
                 <div>
-                    <p class="s1-preprice">Почніть перезавантаження вже сьогодні 👇</p>
+                    <p class="s1-preprice">Почніть вже сьогодні 👇</p>
                 </div>
 
                 <div id="divprice">
