--- a/index.html
+++ b/index.html
@@ -185,9 +185,7 @@
                 <img data-src="img/L 3.png" class="lazyload s55-image">
                 <div class="s55-text" id="divs55">
                     <h2>Куратор курсу</h2>
-                    <p>
-                        <p>👋 Давайте знайомитись: я — Євгеній Корякін, дослідник і практик аюрведи, йоги та інших систем вивчення руху.</p>
-                    </p>
+                    <p>👋 Давайте знайомитись: я — Євгеній Корякін, дослідник і практик аюрведи, йоги та інших систем вивчення руху</p>
                     <ul class="regalia-list">
                         <li>Магістр комплементарної медицини і засновник центру «Centerway» з 15-ти річним професійним досвідом 👨‍⚕️</li>
                         <li>Автор методик по дієтології та детоксикації, ⚙️ розробник оздоровчих програм, на основі йога терапії, сучасних систем вивчення руху, аюрведи</li>
