Update retry link in pay-failed.html

--- a/pay-failed.html
+++ b/pay-failed.html
@@ -29,7 +29,7 @@
 
       <div class="btns">
         <!-- ВАРИАНТ 1: просто вернуть на главную -->
-        <a class="btn primary" href="https://reboot.centerway.net.ua/">Спробувати ще раз</a>
+        <a class="btn primary" href="https://irem.centerway.net.ua/">Спробувати ще раз</a>
       </div>
 
       <p class="muted" id="orderLine">Дані платежу: завантаження…</p>
