Fix layout spacing and section order

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 <div class="bg">
 <section class="s4">
 <div class="container">
-<h2 >Кому підійде 'Інтегральна відновлювальна енергомоделююча гімнастика':</h2>
+<h2 >Кому підійде 'Інтегральна відновлювальна енергомоделююча гімнастика'</h2>
 <div class="items">
 <div class="item">
 <img data-src="img/phobia.png" class="lazyload">
@@ -109,7 +109,7 @@
 
 <section class="s2">
 <div class="container">
-<h2>Структура комплексу кожного дня містить 3 збалансовані взаємодоповнюючі частини:</h2>
+<h2>Структура комплексу кожного дня містить 3 збалансовані взаємодоповнюючі частини</h2>
 </div>
 <div class="container" id="divflex">
 
@@ -132,7 +132,7 @@
 </section>
 <section class="s7">
 <div class="container">
-<h2>Ваш результат постійного виконання вправ щоденного комплексу 'ІВЕМ-гімнастики':</h2>
+<h2>Ваш результат постійного виконання вправ щоденного комплексу 'ІВЕМ-гімнастики'</h2>
 
 <div class="items">
 <div class="it">
@@ -195,7 +195,7 @@
 
 <section class="s3">
 <div class="container">
-<h2>Уся щотижнева програма складається з взаємодоповнюючих елементів різних систем : </h2>
+<h2>Уся щотижнева програма складається з взаємодоповнюючих елементів різних систем</h2>
 <div class="grid-container">
 
 <div class="grid-item "><img src="img/tai-chi.png" class="divicon" alt="Icon 1"><p class="divp">Гімнастика У-шу</p></div>
@@ -230,7 +230,7 @@
 <div class="container">
 <div class="row s55-grid">
 <div id="divs55">
-<h2>Євгеній Корякін</h2>
+<h2>Куратор курсу</h2>
 <p>
 
 <strong>Давайте знайомитись: я — Євгеній Корякін, дослідник і практик аюрведи, йоги та інших систем вивчення руху. </strong> <br><Br>
@@ -251,7 +251,7 @@
 
 <section class="s8">
 <div class="container">
-<h2>Програма курсу:</h2>
+<h2>Програма курсу</h2>
 </div>
 <div class="container">
 <div class="grid-container">
@@ -341,11 +341,9 @@
 </div>
 </section>
 
-
-
 <section class="s88">
 <div class="container">
-<h2>Що входить в программу: </h2>
+<h2>Що входить в програму</h2>
 <div class="items">
 Відразу після оплати ти отримаєш доступ до особистого кабінету з 7-ма докладними відео-уроками комплексів вправ кожного дня тижня з можливостями полегшення або підсилення деяких вправ з урахуванням твоєї поточної потреби та повними текстовими описами вправ
 Доступ до курсу через смартфон або комп'ютер!
@@ -356,7 +354,6 @@
 </section>
 
 
-
 <section class="s11">
 <div class="container">
 <h2>Гарантія</h2>
@@ -364,9 +361,23 @@
 </div>
 
 </section>
+
+<section class="s10">
+<div class="container">
+<div class="title">
+<p>Цей курс великого щоденного комплексу Інтегральної відновлювальної енергомоделюючої гімнастики - для усіх,
+<br> хто хоче бути кожного дня, завжди і стабільно високоефективними у будь-якій справі, у доброму здоров'ї,
+<br> у оптимальній формі тіла, з назавжди врегульованою вагою, молодими та енергійними.
+<br> Цей курс - саме для тебе!
+</p>
+                <div class="price"><span>4000 грн</span></div>
+</div>
+<button class="openModal">Хочу на курс</button>
+</div>
+</section>
 <section class="s3">
 <div class="container">
-<h2>Відгуки:</h2>
+<h2>Відгуки</h2>
 
 <div class="reviews-carousel">
 <button class="carousel-btn prev" type="button" aria-label="Previous">
@@ -430,19 +441,7 @@
 </div>
 </section>
 
-<section class="s10">
-<div class="container">
-<div class="title">
-<p>Цей курс великого щоденного комплексу Інтегральної відновлювальної енергомоделюючої гімнастики - для усіх,
-<br> хто хоче бути кожного дня, завжди і стабільно високоефективними у будь-якій справі, у доброму здоров'ї,
-<br> у оптимальній формі тіла, з назавжди врегульованою вагою, молодими та енергійними.
-<br> Цей курс - саме для тебе!
-</p>
-                <div class="price"><span>4000 грн</span></div>
-</div>
-<button class="openModal">Хочу на курс</button>
-</div>
-</section>
+
 
 <footer class="footer">
 <div class="container">
