--- a/thanks.html
+++ b/thanks.html
@@ -65,7 +65,6 @@
 
     const qs = new URLSearchParams(location.search);
 
-    // Подстрой под то, что реально прилетит от Fondy:
     // пример: ?order_id=123 или ?payment_id=abc
     const tid = qs.get('order_id') || qs.get('payment_id') || qs.get('id') || '';
 
@@ -81,7 +80,7 @@
 
     // ⚠️ ВАЖНО: value/currency должны совпадать с реальной оплатой
     const payload = {
-      value: 3000,
+      value: 4000,
       currency: 'UAH',
       content_name: 'IVEM'
     };
@@ -99,5 +98,13 @@
     }
   })();
   </script>
+
+  <script>
+  // автопереход в бот через 1.2 сек (кнопка остаётся как запасной вариант)
+  setTimeout(() => {
+    window.location.href = "https://t.me/IREM_gymnastic_Bot?start=ZGw6MjA1MTY4";
+  }, 1200);
+  </script>
+  
 </body>
 </html>
