Use Centerway logo for social preview

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <link rel="shortcut icon" href="../CtyCIleTg62l.com/mas_new/img/Rg9OEb6rk4Ln.png/index.html">
     <meta property="og:title" content="">
     <meta property="og:description" content="">
-    <meta property="og:image" content="https://reboot.centerway.net.ua/img/logo.webp">
+    <meta property="og:image" content="https://reboot.centerway.net.ua/img/Centerway_logo.jpg">
     <meta property="og:image:alt" content="Short-Перезавантаження">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:image" content="https://reboot.centerway.net.ua/img/logo.webp">
+    <meta name="twitter:image" content="https://reboot.centerway.net.ua/img/Centerway_logo.jpg">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
