Set OG title and description from hero section

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../CtyCIleTg62l.com/mas_new/img/Rg9OEb6rk4Ln.png/index.html">
-    <meta property="og:title" content="">
-    <meta property="og:description" content="">
+    <meta property="og:title" content="Short-Перезавантаження">
+    <meta property="og:description" content="7 простих вправ, що за 10 хвилин відновлюють тіло та розум">
     <meta property="og:image" content="https://reboot.centerway.net.ua/img/Centerway_logo.jpg">
     <meta property="og:image:alt" content="Short-Перезавантаження">
     <meta name="twitter:card" content="summary_large_image">
