Update styles and layout tweaks

--- a/index.html
+++ b/index.html
@@ -231,16 +231,12 @@
 <div class="row s55-grid">
 <div id="divs55">
 <h2>Куратор курсу</h2>
-<p>
-
-<strong>Давайте знайомитись: я — Євгеній Корякін, дослідник і практик аюрведи, йоги та інших систем вивчення руху. </strong> <br><Br>
-Магістр комплементарної медицини і засновник центру «Centerway» з 15-ти річним професійним досвідом.<br>
-
-
-
-Автор методик по дієтології та детоксикації, розробних оздоровчих програм, на основі йога терапії, сучасних систем вивчення руху, аюрведи.<br>
-Йога та Аюрведа терапевт, переможець змагань з авторських оздоровчих методик “Битва титанів”.
-</p>             
+<p class="s55-lead"><strong>Давайте знайомитись: я — Євгеній Корякін, дослідник і практик аюрведи, йоги та інших систем вивчення руху.</strong></p>
+<ul class="regalia-list">
+<li>Магістр комплементарної медицини і засновник центру «Centerway» з 15-ти річним професійним досвідом.</li>
+<li>Автор методик по дієтології та детоксикації, розробних оздоровчих програм, на основі йога терапії, сучасних систем вивчення руху, аюрведи.</li>
+<li>Йога та Аюрведа терапевт, переможець змагань з авторських оздоровчих методик “Битва титанів”.</li>
+</ul>
 </div>
 
 <img data-src="img/L 3.png" class="lazyload s55-image">
